demo-app/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
    ingress.gcp.kubernetes.io/pre-shared-cert: "demo-app"
    kubernetes.io/ingress.global-static-ip-name: "demo-app"
